--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "async": "^3.2.4",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.2",
     "grammy": "^1.17.2",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "puppeteer": "^20.9.0"
