--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "webscrapper",
   "version": "1.0.0",
   "description": "",
-  "scripts": {},
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ysfjr1/scrapper.git"
