--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async": "^3.2.4",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
+    "chromium": "^3.0.3",
     "express": "^4.18.2",
     "grammy": "^1.17.2",
     "node-cron": "^3.0.2",
