--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "chromium": "^3.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "grammy": "^1.17.2",
     "node-cron": "^3.0.2",
