--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 TELEGRAM_BOT_TOKEN=6271622916:AAE8tnZb1gXLAGrkxoYFlAwsbSb3_DfUwyU
 TELEGRAM_BOT_CHAT_ID=565511281
-//565511281
-//5479132399
+TELEGRAM_CHANNEL_ID=-1001983362008
