--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/ysfjr1/scrapper#readme",
   "dependencies": {
+    "bluebird": "^3.7.2",
+    "cluster": "^0.7.7",
     "dotenv": "^16.3.1",
     "grammy": "^1.17.2",
+    "moment": "^2.30.1",
+    "os": "^0.1.2",
     "puppeteer": "^23.9.0"
   }
 }
